--- a/env/msv-finanzas/.env
+++ b/env/msv-finanzas/.env
@@ -20,11 +20,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db1
+DB_HOST=35.202.217.219
 DB_PORT=3306
 DB_DATABASE=instituto
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
